--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -29,7 +29,7 @@
                 	<li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
                   <% end %>
                   </ul>
-                </div><!--/.nav-collapse -->
+                </div><!--/.nav-collapse 2ecc71 this is green-->
               </div>
             </nav>
 		<!-- end navbar -->
@@ -40,7 +40,8 @@
 				<div class="bg-img">
 					<div class="title-text">
 							<h1>Darrell Wilson</h1>
-							<p>Web Designer by day. Multimedia Artist by night.</p>
+							<p style="color: #F0E68C">Web Designer by day.</p>
+							<p style="color: #00BFFF">Multimedia Artist by night.</p>
 					</div>
 				</div>
 			</div>
@@ -113,6 +114,8 @@
                             <a href="https://www.youtube.com/user/CrabbWalker" target="_blank"><i class="fa fa-youtube-play fa-2x"></i></a>
                             <a href="https://www.linkedin.com/profile/view?id=AAMAAA6ce9oBPeyX7f7jOMIpM-dy9AB_wG2zsiA&trk=hp-identity-name" target="_blank"><i class="fa fa-linkedin-square fa-2x"></i></a>
                         </div>
+                    	</br>
+                        <h6 class="copyright">D a r r e l l&nbsp;W i l s o n &nbsp;&nbsp;©&nbsp;&nbsp;C o p y r i g h t&nbsp;&nbsp;2 0 1 5</h6>
                     </div>
                 </div>
             </div>
