Carousel Working/ Working on individual pin loading to specific part of carousel

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -29,7 +29,7 @@
                 	<li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
                   <% end %>
                   </ul>
-                </div><!--/.nav-collapse 2ecc71 this is green-->
+                </div><!--/.nav-collapse -->
               </div>
             </nav>
 		<!-- end navbar -->
@@ -53,7 +53,7 @@
 			<div class="port-nav row text-center">
 				<a href="#portfolio" class="col-xs-3 cat" data-target="#pCarousel" data-slide-to="0">Animation</a>
 				<a href="#portfolio" class="col-xs-3 cat" data-target="#pCarousel" data-slide-to="1">Design</a>
-				<a href="#portfolio" class="col-xs-3 cat" data-target="#pCarousel" data-slide-to="2">Web Development</a>
+				<a href="#portfolio" class="col-xs-3 cat" data-target="#pCarousel" data-slide-to="2">Web Dev</a>
 				<a href="#portfolio" class="col-xs-3 cat" data-target="#pCarousel" data-slide-to="3">Gallery</a>
 			</div>
           
@@ -88,9 +88,9 @@
 						<figure class="effect-chico">
                             <%=image_tag("Shot2.jpg", alt: "My-Animation-picture")%>
 						<figcaption>
-							<i class="fa-about fa fa-twitter fa-3x"></i>
-                            <p>Thoughts on mostly what I'm thinking...today</p>
-							<a href="https://twitter.com/CrabbWalker" target="_blank">View more</a>
+							<i class="fa-about fa fa-linkedin-square fa-3x"></i>
+                            <p>Contact me professionally!</p>
+							<a href="https://www.linkedin.com/profile/view?id=AAMAAA6ce9oBPeyX7f7jOMIpM-dy9AB_wG2zsiA&trk=hp-identity-name" target="_blank">View more</a>
 						</figcaption>			
 					</figure>
 					</div>
@@ -112,10 +112,10 @@
                         <div class="c-bottom">
                             <a href="https://www.facebook.com/Nami-The-Animated-Series-493577330748173/" target="_blank"><i class="fa fa-facebook-square fa-2x"></i></a>
                             <a href="https://www.youtube.com/user/CrabbWalker" target="_blank"><i class="fa fa-youtube-play fa-2x"></i></a>
-                            <a href="https://www.linkedin.com/profile/view?id=AAMAAA6ce9oBPeyX7f7jOMIpM-dy9AB_wG2zsiA&trk=hp-identity-name" target="_blank"><i class="fa fa-linkedin-square fa-2x"></i></a>
+                            <a href="https://twitter.com/CrabbWalker" target="_blank"><i class="fa fa-twitter fa-2x"></i></a>
                         </div>
                     	</br>
-                        <h6 class="copyright">D a r r e l l&nbsp;W i l s o n &nbsp;&nbsp;©&nbsp;&nbsp;C o p y r i g h t&nbsp;&nbsp;2 0 1 5</h6>
+                        <h6 class="copyright">D a r r e l l&nbsp;&nbsp;W i l s o n&nbsp;&nbsp;&nbsp;©&nbsp;&nbsp;&nbsp;C o p y r i g h t&nbsp;&nbsp;2 0 1 5</h6>
                     </div>
                 </div>
             </div>
