--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -10,6 +10,7 @@
       </ul>
     </div>
   <% end %>
+  </div>
   <div class="form-group">
       <%= f.label :image %><br>
       <%= f.file_field :image %>
@@ -37,4 +38,5 @@
   <div class="form-group">
     <%= f.submit class: "btn btn-primary" %>
   </div>
+
 <% end %>
