finished second scaffold successfully for second slide

--- a/app/views/pages/_portfolio.html.erb
+++ b/app/views/pages/_portfolio.html.erb
@@ -1,15 +1,15 @@
 <div id="pCarousel" class="carousel slide">
     <div class="portfolio carousel-inner">
-        <div class="item active" style="background-color: #272936;">
+        <div class="item active">
           <%= render :template=>"projects/index" %>
         </div>
-        <div class="item" style="background-color: green;">
+        <div class="item">
+          <%= render :template=>"twoprojects/index" %>
+        </div>
+        <div class="item">
           <%= render :template=>"projects/index" %>
         </div>
-        <div class="item" style="background-color: red;">
-          <%= render :template=>"projects/index" %>
-        </div>
-        <div class="item" style="background-color: grey;">
+        <div class="item">
           <%= render :template=>"projects/index" %>
         </div>
     </div>
