--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -162,6 +162,7 @@ $cat-trans-text: color 0.2s linear;
 
 .item{
     height: 100%;
+    background-color: #272936;
 }
 
 #about{
@@ -256,10 +257,6 @@ $c-padding: 50px;
     border-right-color: transparent;
 }
 
-.panel-heading {
-
-}
-
 .panel-body p{
     color: #fff;
 }
@@ -271,4 +268,8 @@ $c-padding: 50px;
 .masonry {
     position: relative;
     display:block;
+}
+
+.box{
+    margin: 0px;
 }
